Dup kwrest hash when merging other keyword arguments [Bug #17481]